@@ -16,6 +16,12 @@
 	 url="http://forums.civfanatics.com/forumdisplay.php?f=268">
 	 
 	<options id="Core" file="BUG Core.ini">
+		<section id="General">
+			<option id="OptionsScreenOpened" key="Options Screen Opened" 
+					type="boolean" default="False"
+					help="Set to True the first time the player opens the BUG Options screen"/>
+		</section>
+		
 		<section id="Logging">
 			<list   id="ScreenLogLevel" key="Screen Level" 
 					type="int" default="2" listType="string" 
