@@ -23,6 +23,9 @@ import BugUtil
 
 g_optionsScreen = None
 
+CoreOpt = BugCore.game.Core
+MainOpt = BugCore.game.MainInterface
+
 
 ## Using and Showing
 
@@ -30,6 +33,10 @@ def getOptionsScreen():
 	return g_optionsScreen
 
 def showOptionsScreen(argsList=None):
+	if not CoreOpt.isOptionsScreenOpened():
+		# the first time the Options screen is opened, disable the shortcut reminder
+		CoreOpt.setOptionsScreenOpened(True)
+		MainOpt.setShowOptionsKeyReminder(False)
 	getOptionsScreen().interfaceScreen()
 
 
